# Written by Daniel Robbins (drobbins@gentoo.org)

* rc-scripts 1.4.0 (7 Sep 2002)

  7 Sep 2002; Martin Schlemmer <azarah@gentoo.org>:

    Update /etc/init.d/net.eth0 to handle individual broadcast
    and netmask for aliases.  Should close bug #7407.

    Give /var/run/utmp and /var/log/wtmp the proper permissions
    and ownership.  First steps in fixing bug #7630.

  26 Aug 2002; Donny Davies <woodchip@gentoo.org>:

    Give root a 'root' GECOS in /etc/passwd, was NULL before.

* rc-scripts 1.3.9 (25 Aug 2002)

  25 Aug 2002; Martin Schlemmer <azarah@gentoo.org>:

    Update /sbin/rc to fix some spelling/slang mistakes.  Closes
    bug #6887.

    Move /etc/init.d/net.ppp0 's config to /etc/conf.d/net.ppp0.
    This closes bug #6378.

    Add IPv6 support to /etc/init.d/net.eth0.  Closes bug #6175,
    with many thanks to Asbjorn Sannes <ace@sannes.org>.

  20 Aug 2002; Martin Schlemmer <azarah@gentoo.org>:

    Update /etc/init.d/bootmisc to reset pam_console permissions.
    
    Update /etc/devfsd.conf to have the "pam_console_apply_devfsd.so"
    line for getting devfs to work with pam_console.

  12 Aug 2002; Martin Schlemmer <azarah@gentoo.org>:

    Update /etc/init.d/keymaps to first load the windowkeys.inc then
    the user selected one, fixing bug #6295.

  11 Aug 2002; Martin Schlemmer <azarah@gentoo.org>:

    Change the 'cat' in check_rcscript() to a single 'awk' in
    /sbin/depscan.sh.  This should fix broken pipe issues if the
    loop exists too early.  Resolves bug #5961.

    Fix software RAID startup/shutdown, bug #5310.  Modified
    /etc/init.d/checkfs and /etc/init.d/halt.sh for this.

* rc-scripts 1.3.8 (08 Aug 2002)

   7 Aug 2002; Martin Schlemmer <azarah@gentoo.org>:

    Move the color ls stuff to .bashrc.  Fix bug #5250.

   6 Aug 2002; Dan Armak <danarmak@gentoo.org>:
   
    Correct the comments in rc.conf about the XSESSION variable: it should
    be set to "kde-<version>" not "KDE". Closes bug #5948.
